--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -15,6 +15,9 @@ h5 {
 h1 {
   font-size: 62px;
 }
+h2 {
+  font-size: 43px;
+}
 h3 {
   font-size: 36px;
 }
@@ -75,12 +78,12 @@ a,
 }
 .btn-primary {
   background-color: rgb(172, 102, 141);
-  border-color: #751a46;
+  border-color: rgba(125, 39, 81, 1);
 }
 .btn-primary:hover,
 .btn-primary:focus {
-  background-color: #751a46;
-  border-color: #60163a;
+  background-color: rgba(125, 39, 81, 1);
+  border-color: rgba(125, 39, 81, 1);
 }
 .overlay {
   position: absolute;
@@ -117,7 +120,7 @@ a,
   width: 48px;
 }
 #back-to-top:hover {
-  background: #60163a;
+  background: rgba(125, 39, 81, 1);
 }
 #back-to-top.show {
   opacity: 1;
@@ -143,13 +146,13 @@ a,
 .navbar-inverse .navbar-nav > .open > a,
 .navbar-inverse .navbar-nav > .open > a:focus,
 .navbar-inverse .navbar-nav > .open > a:hover {
-  background-color: #4c112d;
+  background-color: rgba(125, 39, 81, 1);
 }
 .navbar-inverse .navbar-nav > li > a {
   color: #fff;
 }
 .navbar-inverse .navbar-nav > li > a:hover {
-  background-color: #4c112d;
+  background-color: rgba(125, 39, 81, 1);
 }
 .navbar-inverse .navbar-brand {
   color: #fff;
@@ -177,10 +180,10 @@ a,
 .navbar-inverse .navbar-toggle:focus,
 .navbar-inverse .navbar-toggle:hover,
 .navbar-inverse .navbar-toggle {
-  background-color: #4c112d;
+  background-color: rgba(125, 39, 81, 1);
 }
 .navbar-inverse .navbar-toggle {
-  border-color: #4c112d;
+  border-color: rgba(125, 39, 81, 1);
 }
 /* Responsive */
 /* Extra Small Devices, Phones */
@@ -199,7 +202,7 @@ a,
     color: #fff;
   }
   .navbar-inverse .navbar-nav .open .dropdown-menu .divider {
-    background-color: #4c112d;
+    background-color: rgba(125, 39, 81, 1);
   }
 }
 header {
@@ -337,7 +340,14 @@ header .brand h1 {
   color: #ffffff;
   margin-top: 15px;
   margin-bottom: 15px;
-  background-color: rgba(92, 33, 54, 0.8);
+  background-color: rgba(125, 39, 81, 0.8);
+  min-height: 320px;
+  line-height:320px;
+}
+.section-dates .dates-info .vertical {
+  vertical-align:middle;
+  display:inline-block;
+  line-height:1.2; /* on rétablit le line-height */
 }
 .section-dates .dates-info .ceremony {
   text-transform: uppercase;
@@ -464,4 +474,10 @@ textarea.error {
 }
 .footer a {
   color: #dd659f;
+}
+.copyright {
+  color: #fff;
+}
+.copyright a {
+  color: #fff;
 }
